# leptos-simple-spa

./: .leptosfmt.toml  Cargo.toml  README.md  index.html  rust-analyzer.toml
frontend/: Cargo.toml  README.md  index.html
frontend/src/: main.rs
lambdas/: Cargo.toml
src/: main.rs  paste_lambda.rs
