[package]
name = "first-leptos-spa"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.5"
aws-sdk-lambda = "1.42.0"
console_error_panic_hook = "0.1.7"
lambda_runtime = "0.13.0"
leptos = { version = "0.6.12", features = ["csr", "nightly"] }
leptos_router = { version = "0.6.14", features = ["csr", "nightly"] }
tokio = { version = "1.39.3", features = ["full"] }
serde_json = "1.0.125"

