[package]
name = "lambdas"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.5"
aws-sdk-lambda = { version = "1.42.0" }
lambda_runtime = { version = "0.13.0" }
tokio = { version = "1.40.0", features = ["full"] }
serde_json = "1.0.125"

[[bin]]
name = "paste_lambda"
path = "src/bin/paste_lambda.rs"
test = false